--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p{
     transition: 0.5s;
     text-decoration: none;
     border-radius: 10px;
-    border:solid #E9E9E9;
+    border:solid #E9E9E8;
 }
 
 a{
@@ -57,10 +57,16 @@ a{
 }
 
 .flex-item:hover {
-	box-shadow:0px 0px 50px grey;
+	border:solid #BCBBC7;
+	box-shadow:0px 0px 45px grey;
+}
+
+.flex-item:hover .info {
+	opacity: 0.8;
 }
 
 .info{
+	transition: 0.5s;
 	display: flex;
   	align-items: center;
   	justify-content: center;
@@ -71,4 +77,12 @@ a{
 	margin-top: 317px;
 	border-radius: 10px;
 	opacity: 0.5;
+}
+
+#it1{
+	background-image: url(img/pattern1.png);
+}
+
+#it2{
+	background-image: url(img/pattern2.png);
 }
