--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html,body{
+
+html, body{
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -85,4 +86,21 @@ a{
 
 #it2{
 	background-image: url(img/pattern2.png);
+}
+
+@media only screen and (max-width: 767px) {
+    
+    .flex-container {
+    justify-content: normal;
+}
+
+h1{
+	display: none;
+}
+
+p{
+	display: none;
+}
+
+    }
 }
