--- a/assignment4/style.css
+++ b/assignment4/style.css
@@ -179,7 +179,7 @@ html, body{
 }
 
 .hd{
-	width: 290px;
+	width: 190px;
 	height: auto;
 	cursor: pointer;
 	transition: 0.5s;
@@ -412,8 +412,8 @@ html,body{
 }
 
 .menubttn{
-	width: 60px;
-	height: 60px;
+	width: 40px;
+	height: 40px;
 	display: block;
 }
 
@@ -450,7 +450,7 @@ html,body{
 }
 
 .hd{
-	margin-left: 0;
+	margin-left: 20px;
 }
 
 .half{
