--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -1,23 +1,43 @@
 html, body{
 	width: 100%;
 	height:100%;
-	background-color:white;
+	background-color:black;
 	margin:0;
 }
 
 p{
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
+	font-weight: 400;
 	font-size: 39px;
-	margin-top: 160px;
+	padding-top: 30px;
+	color: white;
 }
 
 .pos1, .pos2, .pos3, .pos4, .pos5{
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
+	font-weight: 400;
 	font-size: 39px;
+}
+.pos1{
+	color: skyblue;
+}
+
+.pos2{
+	color: #52D950;
+}
+
+.pos3{
+	color: #A954FF;
+}
+
+.pos4{
+	color: #FF385F;
+}
+
+.pos5{
+	color: #FFA300;
 }
 
 .info{
@@ -28,7 +48,7 @@ p{
 .hide{
 	width: 100%;
 	height: 60%;
-	background-color: white;
+	background-color: black;
 }
 
 .page{
