--- a/assignment4/style.css
+++ b/assignment4/style.css
@@ -151,7 +151,7 @@ html, body{
 	margin-top: 20px;
 	margin-bottom: 20px;
 	font-family: 'Roboto', sans-serif;
-	font-size: 20px;
+	font-size: 30px;
 }
 
 .imgp{
@@ -410,6 +410,10 @@ html,body{
 	width: 100%;
 	height: 100%;
 }
+
+.desc2{
+	font-size: 20px;
+	}
 
 .menubttn{
 	width: 40px;
